--- a/docker/Dockerfile.website
+++ b/docker/Dockerfile.website
@@ -2,7 +2,7 @@
 # Mac M1) and avoids recent Prisma docker bugs that lead to segfaults.
 
 # Install dependencies only when needed
-FROM artifactory.rakuten-it.com/dockerhub/node:16.19.1 AS deps
+FROM artifactory.rakuten-it.com/rit-eng-docker-dev-local/node:16.19.1 AS deps
 WORKDIR /app
 
 # Install dependencies based on the preferred package manager
@@ -19,7 +19,7 @@ RUN --mount=type=bind,from=deps,source=/app/node_modules,target=/app/node_module
   npx prisma generate && npm run build
 
 # Production image, copy all the files and run next
-FROM artifactory.rakuten-it.com/dockerhub/node:16.19.1 AS runner
+FROM artifactory.rakuten-it.com/rit-eng-docker-dev-local/node:16.19.1 AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
