--- a/docker/Dockerfile.website
+++ b/docker/Dockerfile.website
@@ -19,7 +19,7 @@ RUN --mount=type=bind,from=deps,source=/app/node_modules,target=/app/node_module
   npx prisma generate && npm run build
 
 # Production image, copy all the files and run next
-FROM node:16.19.1 AS runner
+FROM artifactory.rakuten-it.com/dockerhub/node:16.19.1 AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
