--- a/docker/inference/Dockerfile.server
+++ b/docker/inference/Dockerfile.server
@@ -46,7 +46,7 @@ RUN adduser               \
 
 USER ${APP_USER}
 
-RUN mkdir -p "${PROMETHEUS_MULTIPROC_DIR}"
+RUN mkdir -p "${PROMETHEUS_MULTIPROC_DIR}"; chown "${APP_USER}:${APP_USER}" "${PROMETHEUS_MULTIPROC_DIR}"
 COPY --chown="${APP_USER}:${APP_USER}" ./inference/server ${APP_ROOT}
 
 WORKDIR ${APP_ROOT}
