--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -31,13 +31,13 @@ jobs:
         uses: docker/login-action@v2.1.0
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Get base registry
         run: |
-          echo "REGISTRY=ghcr.io/${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
+          echo "REGISTRY=registry-jpw1.r-local.net/cslc-logging-riteng2" >> $GITHUB_ENV
       - name: Set tag prefix
-        if: github.ref_name != 'main'
+        if: github.ref_name != 'initial_bug_fixes'
         run: |
           echo "TAG_PREFIX=${{ github.ref_name }}-" >> $GITHUB_ENV
       - name: Extract metadata (tags, labels) for Docker
@@ -46,9 +46,9 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ inputs.image-name }}
           tags: |
-            type=raw,value=latest,enable=${{ github.ref_name == 'main' }}
-            type=sha,prefix=${{ env.TAG_PREFIX }},format=short,enable=${{ github.ref_name != 'main' }}
-            type=ref,event=tag,enable=${{ github.ref_name != 'main' }}
+            type=raw,value=latest,enable=${{ github.ref_name == 'initial_bug_fixes' }}
+            type=sha,prefix=${{ env.TAG_PREFIX }},format=short,enable=${{ github.ref_name != 'initial_bug_fixes' }}
+            type=ref,event=tag,enable=${{ github.ref_name != 'initial_bug_fixes' }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v3.2.0
         with:
