--- a/docker/Dockerfile.website
+++ b/docker/Dockerfile.website
@@ -2,7 +2,7 @@
 # Mac M1) and avoids recent Prisma docker bugs that lead to segfaults.
 
 # Install dependencies only when needed
-FROM artifactory.rakuten-it.com/dockerhub/node:16.19.1 AS deps
+FROM node:16.19.1 AS deps
 WORKDIR /app
 
 # Set proxy
@@ -16,7 +16,7 @@ COPY ./website/package*.json ./
 RUN npm ci
 
 # Rebuild the source code only when needed
-FROM artifactory.rakuten-it.com/dockerhub/node:16.19.1 AS builder
+FROM node:16.19.1 AS builder
 WORKDIR /app
 COPY ./website/ .
 
@@ -31,7 +31,7 @@ RUN --mount=type=bind,from=deps,source=/app/node_modules,target=/app/node_module
   npx prisma generate && npm run build
 
 # Production image, copy all the files and run next
-FROM artifactory.rakuten-it.com/dockerhub/node:16.19.1 AS runner
+FROM node:16.19.1 AS runner
 WORKDIR /app
 
 # Set proxy
